--- a/src/main/webapp/WEB-INF/css/sitestyle.css
+++ b/src/main/webapp/WEB-INF/css/sitestyle.css
@@ -112,7 +112,9 @@ a:active {
 @media only screen and (max-width: 750px) {
     .line1{
         flex-direction: column;
-
+    }
+    .line2{
+        flex-direction: column;
     }
     .elt3{
         border-left: none;
