--- a/src/main/webapp/WEB-INF/css/formstyle.css
+++ b/src/main/webapp/WEB-INF/css/formstyle.css
@@ -1,4 +1,4 @@
-.form input[type=text], input[type=password], input[type=email], input[type=date], select, textarea{
+.form input[type=text], input[type=password], input[type=number], input[type=email], input[type=date], select, textarea{
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
