--- a/src/main/webapp/WEB-INF/css/topostyle.css
+++ b/src/main/webapp/WEB-INF/css/topostyle.css
@@ -18,7 +18,7 @@
     min-height: 375px;
     display: flex;
     flex-wrap: wrap;
-    color: darkcyan;
+    color: black;
     text-align: center;
 }
 
