--- a/src/main/webapp/WEB-INF/css/topostyle.css
+++ b/src/main/webapp/WEB-INF/css/topostyle.css
@@ -8,6 +8,17 @@
 
 }
 
+button {
+    color:darkcyan;
+    transition-duration: 0.4s;
+    width: 250px;
+}
+
+button:hover {
+    background-color: lightseagreen;
+    color: white;
+}
+
 .elt1 {
     color: darkcyan;
     text-align: center;
