--- a/src/main/webapp/WEB-INF/css/formstyle.css
+++ b/src/main/webapp/WEB-INF/css/formstyle.css
@@ -1,4 +1,4 @@
-.form input[type=text], input[type=password], input[type=number], input[type=email], input[type=date], select, textarea{
+.form input[type=text], input[type=password], input[type=number], input[type=email], input[type=date], select, textarea, .form a{
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -11,6 +11,19 @@
 
 .form input[type=submit] {
     width: 100%;
+    background-color: lightseagreen;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+
+}
+
+.form a{
+    justify-content: center;
+    width: 100%;
     background-color: powderblue;
     color: white;
     padding: 14px 20px;
@@ -18,6 +31,7 @@
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    text-decoration: none;
 
 }
 
